Thu Oct 14 07:35:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (DEVT2NUM): added. Size of dev_t is depend on the
	  environment even if POSIX defines dev_t as unsigned integer.
	  For example, OpenVMS, 64bit Solaris 9, and NetBSD 6 defines
	  dev_t as 64bit unsigned integer.

	* file.c (rb_stat_dev): use DEVT2NUM.

	* file.c (rb_stat_dev_major): dev_t is not long. major(3)'s return
	  value is int.

	* file.c (rb_stat_dev_minor): dev_t is not long. minor(3)'s return
	  value is int.

	* configure.in: check size of dev_t.

Thu Oct 14 07:22:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_and, rb_ary_or), class.c (rb_mod_init_copy),
	  gc.c (undefine_final), time.c (time_mload): get rid of
	  type-punning casts.

Thu Oct 14 04:16:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (ruby_float_step): fix Numeric#step with infinity unit
	  doesn't works well. [ruby-core:32779]

Wed Oct 13 23:16:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/enc-unicode.rb: get rid of lots of warnings.

	* iseq.c (insn_operand_intern, rb_iseq_disasm): fix format specifiers.

	* vm.c (thread_free): ditto.

	* numeric.c (check_uint): get rid of overflow on LLP64 platforms.

	* insns.def (opt_case_dispatch): use st_data_t.

Wed Oct 13 22:32:34 2010  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI::unescape): bugfix to unescape the multibyte
	  string. Thanks nobu and tDiary dev members. [Bug #3909]

Wed Oct 13 21:13:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_chr): raise error when the value is negative.

Wed Oct 13 19:24:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vm_destruct): This function type was wrong; correct to the prototype.

Wed Oct 13 14:58:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (rb_num_to_uint): fix 32bit logic.

Wed Oct 13 12:53:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (rb_num_to_uint): added to check the range of arguments.